# franka_fruit_pick_demo

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/: Dockerfile
franka_fruit_pick/: __init__.py  aggregate_datasets.py  build_scene.py  eval_policy.py  eval_sweep.py  grasp_demo.py  paths.py  randomize.py  record_dataset.py  scene_config.py  setup_assets.py  train_policy.py
franka_fruit_pick/tools/: __init__.py  dr_preview.py  motion_probe.py  scale_ycb.py
